# Deng

./: ..gitignore.un~  .gitignore  .gitmodules  .premake5.lua.un~  .travis.yml  BUILD.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  about.html  bugs.html  build.yml  build_devel.yml  compile_commands.json  dam.make  deng  deng.make  downloads.html  freetype.make  index.html  init.bat  main.css  main.js  news.html  premake5.lua  rgbbitmap.log.REMOVED.git-id  tags  triagnle  vk_sandbox.make
src/: CMakeLists.txt  camera.cpp  dengcore.cpp  dengmath.cpp  events.cpp  filemanager.cpp  gridgenerator.cpp  main.cpp  objectshandler.cpp  objloader.cpp  queuemanager.cpp  renderer.cpp  rendererutils.cpp  sample.txt  swapchaindetails.cpp  textureloader.cpp  timer.cpp  window.cpp
src/common/: base_types.h  common.c  common.h  hashmap.c  stack.c  test.c  uuid.c
src/core/: api_core.h  camera.cpp  camera.h  deng_core.h  dengcore.h  err_def.h  forward_dec.h  rend_helpers.cpp  rend_helpers.h  renderer.cpp  renderer.h  renderer_utils.cpp  renderer_utils.h  rendererutils.cpp  rendererutils.h  window.cpp  window.h
src/dam/: Makefile  assembler.c  assembler.h  asset_creator_core.h  dam.c  dam.h  dam_core.h  das_core.h  das_handler.c  das_handler.h  data_loader.c  data_loader.h  hdr_data.h  loader.c  loader.h  main.c  test.das
src/das/: assets.h  dam.c  dam.cpp  dam.h  das_core.h  das_handler.c  das_handler.h  das_loader.c  data_loader.c  data_loader.h  hdr_data.h  local_repos.conf  tex_loader.c  wavefront_obj.c
src/das_maker_tool/: Makefile  arr_test  asset_creator_core.h  dyn_arr.c  dyn_arr.h  image_loader  loader.c  loader.h  test.c
src/data/: dam.c  dam.cpp  das_check.c  das_reader.c  das_runtime.c  das_static_assembler.c  obj_tokens.c  tex_loader.c  wavefront_obj.c
src/deng/: camera.cpp  cdeng.cpp  deng_math.cpp  events.cpp  key_ev.c  key_translation.c  key_vector.c  rend_helpers.cpp  renderer.cpp  surface_test.c  vulkan_handler.c  win32_surface.c  window.cpp  x11_surface.c
src/deng/camera/: cam_base.cpp  ed_cam.cpp  fpp_cam.cpp
src/deng/cross_api/: offset_finder.cpp
src/deng/lighting/: light_base.cpp  light_man.cpp
src/deng/opengl/: buffers.cpp  pipelines.cpp  renderer.cpp  shader_loader.cpp  ubm.cpp
src/deng/registry/: registry.cpp
src/deng/renderer/: asset_man.cpp  data_updater.cpp  renderer.cpp
src/deng/surface/: .win32_surface.c.un~  key_ev.c  key_translation.c  win32_surface.c  x11_surface.c
src/deng/vulkan/: asset_cpy.cpp  bm.cpp  dc.cpp  desc_c.cpp  desc_pool.cpp  desc_set_layout.cpp  desc_sets.cpp  ic.cpp  pipeline_ci_gen.cpp  pipelines.cpp  qm.cpp  rend_init.cpp  renderer.cpp  resources.cpp  rm.cpp  runtime_updater.cpp  scc.cpp  sd.cpp  surface.c  tm.cpp  ubm.cpp  vulkan_dc.cpp  vulkan_desc_c.cpp  vulkan_handler.c  vulkan_ic.cpp  vulkan_pipelines.cpp  vulkan_qm.cpp  vulkan_ra.cpp  vulkan_renderer.cpp  vulkan_resources.cpp  vulkan_scc.cpp  vulkan_sd.cpp
src/deng/xcursor/: invisible
src/deng_standard/: vector.h
src/dengui/: dengui.cpp  dengui.h  dengui_child.cpp  dengui_core.h  dengui_event_handles.cpp  dengui_event_handles.h  dengui_events.cpp  dengui_events.h  dengui_infos.h  dengui_pixel_collision.cpp  dengui_pixel_collision.h  dengui_sprites.cpp  dengui_sprites.h  dengui_window.cpp  dengui_window.h  map_editor_ui.cpp  sprites.cpp  sprites.h  ui_callbacks.cpp
src/dengui/core/: dengui_core.h  dengui_font_loader.cpp  dengui_font_loader.h  dengui_infos.h  dengui_sprites.cpp  dengui_sprites.h  dengui_window.cpp  dengui_window.h
src/dengui/css/: titlebar.css  window.css
src/dengui/css_engine/: css_data_manager.cpp  css_data_manager.h  css_definitions.h  css_engine_core.h
src/dengui/editor_uis/: map_editor_ui.cpp  map_editor_ui.h
src/dengui/events/: dengui_event_handles.cpp  dengui_event_handles.h  dengui_events.cpp  dengui_events.h
src/dengui/main/: dengui.h  dengui_child.h  dengui_events.cpp  dengui_window.cpp  dengui_window.h  gui_events.cpp  gui_events.h  gui_window.cpp  gui_window.h
src/dengui/map_editor/: map_windows.h
src/dengui/pixel_perfect_collision/: dengui_pixel_collision.cpp  dengui_pixel_collision.h
src/dengui/vulkan/: vulkan_update.cpp
src/headers/: camera.h  dengcore.h  dengmath.h  events.h  files.REMOVED.git-id  files.h  gridgenerator.h  objectshandler.h  objloader.h  parsing.h  queuemanager.h  renderer.h  renderer.h.gch.REMOVED.git-id  rendererutils.h  swapchaindetails.h  textureloader.h  timer.h  vectors.h  window.h
src/imgui-layer/: imgui_sandbox.cpp  ui_manager.cpp
src/imgui-layer/scene_editor/: sc_ed.cpp  sc_ed_entity_panel.cpp  sc_ed_ui.cpp
src/main/: main.cpp  sandbox.cpp  sandbox_3d.cpp
src/main/vulkan/: .vulkan_sandbox.cpp.un~  vulkan_sandbox.cpp  vulkan_sandbox.h
src/math/: camera_mat.cpp  conversion.cpp  mat2.cpp  mat3.cpp  mat4.cpp  projection_mat.cpp  transformer.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/maths/: deng_math.cpp  deng_math.h  dengmath.cpp  dengmath.h  events.cpp  events.h  objects_handler.cpp  objects_handler.h  objectshandler.cpp  objectshandler.h
src/sandbox/dengbox/: dengbox.cpp  dengbox.h
src/sandbox/imgui_sandbox/: imgui_sandbox.cpp  imgui_sandbox.h
src/sandbox/opengl/: opengl_sandbox.cpp  opengl_sandbox.h
src/scripting/: parsing.h
src/shapes/: shapes.cpp  shapes.h
src/surface/: Makefile  deng_key_definitions.h  deng_surface_core.h  deng_surface_window.h  key_translation.c  key_vector.c  key_vector.h  main.c  test.c  vulkan_handler.c  vulkan_handler.h  win32_surface.c  window  x11_surface.c
src/surface/linux/: Makefile
src/surface/windows/: Makefile
src/utilities/: Makefile  file_manager.cpp  filemanager.cpp  files.h  font.cpp  font.h  grid_generator.cpp  grid_generator.h  gridgenerator.cpp  gridgenerator.h  object_loader.cpp  object_loader.h  objloader.cpp  objloader.h  rend_utils.cpp  rend_utils.h  shapes.cpp  texture_loader.cpp  texture_loader.h  textureloader.cpp  textureloader.h  timer.cpp  timer.h  utils_test.cpp
src/utilities/data_handler/: files.h  (+5 more)
src/utils/: collision.cpp  font.cpp  grid_generator.cpp  mesh_gen.cpp  shape_gen.cpp  shapes.cpp  timer.cpp
(+416 files in other folders)
